--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/WEB/day05/image/bulb-2388828_1920.jpg" class="d-block w-100" alt="...">
+                        <img src="./image/bulb-2388828_1920.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block h-50">
                             <h2>임베디드 트랙 교육생 김하영입니다</h2>
                             <p>SSAFY 6기 임베디드 트랙에서 교육 듣게 되었습니다.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/WEB/day05/image/raspberry-pi-4980917_1920.jpg" class="d-block w-100" alt="...">
+                        <img src="./image/raspberry-pi-4980917_1920.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block h-50">
                             <h2>코딩에 관심이 많습니다.</h2>
                             <p>졸업 후 처음으로 취직한 직장에서 코딩을 해보고 더 배우고자 SSAFY에 지원했습니다.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/WEB/day05/image/arduino-2713093_1920.jpg" class="d-block w-100" alt="...">
+                        <img src="./image/arduino-2713093_1920.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block h-50">
                             <h2>제어공학을 전공했습니다.</h2>
                             <p>제어공학을 배워 임베디드 기초라 할 수 있는 MCU를 많이 다뤄봤습니다.</p>
@@ -116,7 +116,7 @@
             </nav>
             <!-- 본 내용 -->
             <div class="card m-lg-auto" style="width: 18rem;">
-                <img src="/WEB/day05/image/1560232249537.jpg" class="card-img-top" alt="...">
+                <img src="./image/1560232249537.jpg" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title">김하영</h5>
                     <p class="card-text">IoT Developer <br>(Web + Embedded)</p>
@@ -430,7 +430,7 @@
                 Closing
             </div>
             <div class="card bg-light mb-3 mt-5 text-center">
-                <img src="/WEB/day05/image/rocket-launch-67643_1920.jpg" class="card-img-top w-50 ms-auto mx-auto mt-5">
+                <img src="./image/rocket-launch-67643_1920.jpg" class="card-img-top w-50 ms-auto mx-auto mt-5">
                 <div class="card-body">
                     <h3 class="card-title">더 높이 올라가고가 하는 개발자입니다.</h3>
                     <div class="card-text">
